# proyecto_final_RV_brazo-comandado

./: .gitignore  .gitmodules  README.md  init.ps1
FirmwareESP8266/: platformio.ini
FirmwareESP8266/ros2_bridge/: package.xml  setup.cfg  setup.py
FirmwareESP8266/ros2_bridge/joint_state_udp_bridge/: joint_state_udp_bridge.py
FirmwareESP8266/src/: main.cpp
Joystick/joystick/mechanics/: R-Pi pico.SLDPRT  base_analogic.SLDPRT  bottom_assembly.SLDASM  breadboard_50x70.SLDPRT  joystick_v1.SLDPRT  joystick_v1_bottom.3mf  joystick_v1_bottom.SLDPRT  joystick_v1_bottom.STEP  joystick_v1_top.SLDPRT  joystick_v2_bottom.SLDPRT  joystick_v2_bottom.STEP  joystick_v2_top.SLDPRT  joystick_v2_top.STEP  joystick_v3_bottom.SLDPRT  joystick_v3_bottom.STL  joystick_v3_top.STEP
Planta_BrazoRobótico/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Planta_BrazoRobótico/Assets/: AxisRenderer.cs  AxisUIController.cs  CameraJoystickController.cs  Ctrl_OnRobot_RG2_Custom.cs  Cubo.mat  GripperController.cs  GripperTriggerForwarder.cs  JoystickAdapter.cs  PS4Joystick.inputactions  RobotBasic.inputactions  RobotInput.inputactions
Planta_BrazoRobótico/Assets/Input/: RobotInput.inputactions
Planta_BrazoRobótico/Assets/Prefabs/: ABB_Smart_Gripper_L_Type_2.prefab  Barra Vertical - Input Info.prefab  EE_SMC_MHM.prefab  OnRobot_RG2_Holder.prefab  (+2 more)
Planta_BrazoRobótico/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
docs/: Recursos metodologia Agile.md
(+51 files in other folders)
